// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.
//
// This is a proxy for Diamater application S6a/S6d 3GPP 29.272
// It is watered down for use with OpenAirInterface EPC with extensibility in mind
//
// For details about fields see:
// http://www.etsi.org/deliver/etsi_ts/129200_129299/129272/10.09.00_60/ts_129272v100900p.pdf

syntax = "proto3";

import "lte/protos/s6a_proxy.proto";

package magma.feg;

option go_package = "magma/feg/cloud/go/protos";

service S6aGatewayService {
    // Cancel-Location (Code 317)
    rpc CancelLocation (CancelLocationRequest) returns (CancelLocationAnswer) {}

    // Reset (Code 322)
    rpc Reset(ResetRequest) returns (ResetAnswer) {}
}

// Cancel Location Request (Section 7.2.7)
message CancelLocationRequest {
    // Subscriber identifier
    string user_name = 1;
    // Type of cancellation 7.3.24
    CancellationType cancellation_type = 2;
    enum CancellationType {
        MME_UPDATE_PROCEDURE     = 0;
        SGSN_UPDATE_PROCEDURE    = 1;
        SUBSCRIPTION_WITHDRAWAL  = 2;
        UPDATE_PROCEDURE_IWF     = 3;
        INITIAL_ATTACH_PROCEDURE = 4;
    }
}

// Cancel Location Answer (Section 7.2.8)
message CancelLocationAnswer {
    // EPC error code on failure
    magma.lte.ErrorCode error_code = 1;
}

// Reset Request (3GPP TS 29.272 Section 7.2.15)
message ResetRequest {
    // Subscriber identifier
    repeated string user_id = 1;
}

// Reset Answer (3GPP TS 29.272 Section 7.2.16)
message ResetAnswer {
    // EPC error code on failure
    magma.lte.ErrorCode error_code = 1;
}
